--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "LiveServer",
-  "version": "1.0.2",
+  "name": "live-server-graviton",
+  "version": "1.1.0",
   "id": "live-server",
   "mainSrc": "index.ts",
   "mainDev": "dist/index.js",
@@ -18,8 +18,10 @@
   },
   "devDependencies": {
     "@gveditor/sdk": "^0.4.1",
+    "@types/finalhandler": "^1.1.0",
     "@types/live-server": "^1.2.0",
     "@types/node": "^14.6.2",
-    "@types/open": "^6.2.1"
+    "@types/open": "^6.2.1",
+    "@types/serve-static": "^1.13.5"
   }
 }
